pagina con los colores de yael

--- a/css/my_style.css
+++ b/css/my_style.css
@@ -9,21 +9,29 @@ h1, h2, h3, h4, h5, h6{
 
 /*COLOR TEXTOS PRIMARIOS*/
 .text-primary {
-	color: #6082B0 !important;
+	/*color: #6082B0 !important;*/
+	color: #313654 !important;
 }
 
 /*ICONOS DE WHATS,MAIL,DIRE y de los que aparecen en xq elegirnos*/
-.icon, .icon-lg {
-	color: #313654;
+.icon {
+	/*color: #313654;*/
+	color: white;
+}
+
+.icon-lg{
+	color: #F6B78D;
 }
 
 /*Texto al lado de los iconos de wp, mail, dire*/
 .navbar-contact-list li a, .navbar-contact-list li a:focus, .navbar-contact-list li a:active {
-	color: #313654;
+	/*color: #313654;*/
+	color: white;
 }
 
 .navbar-contact-list li a:hover {
-	color: rgba(49, 54, 84, 0.5);
+	/*color: rgba(49, 54, 84, 0.5);*/
+	color: white;
 }
 
 /*iconos redes sociales*/
@@ -32,14 +40,16 @@ h1, h2, h3, h4, h5, h6{
 }
 
 .social-links li a {
-	color: #313654;
+	/*color: #313654;*/
+	color: white;
 }
 
 /*NAVBAR */
 
 /*fondo del navbar cuando haces scroll para abajo*/
 .rd-navbar-static.rd-navbar--is-stuck, .rd-navbar-static.rd-navbar--is-clone {
-	background: #6082B0;
+	/*background: #6082B0;*/
+	background: #313654;
 }
 
 /*letra del menu que NO esta seleccionada, SOLO EN PANTALLA GRANDE*/
@@ -66,6 +76,48 @@ h1, h2, h3, h4, h5, h6{
 .rd-navbar-classic.rd-navbar-static.rd-navbar--is-stuck .rd-navbar-main, .rd-navbar-classic.rd-navbar-static.rd-navbar--is-clone .rd-navbar-main{
 	padding: 5px 0;
 }
+
+/*barra donde aparece los iconos de wp, dire.. en pantalla grande*/
+.bg-gray-dark{
+	background-color: #313654;
+}
+
+/*navbar pantallas chicas (menu hamburguesa)*/
+.rd-navbar-fixed .rd-navbar-panel{
+	background-color: #313654;
+	color: white;
+}
+
+/*lineas menu hamburguesa*/
+.rd-navbar-toggle span:after, .rd-navbar-toggle span:before, .rd-navbar-toggle span{
+	background-color: white;
+}
+
+/*menu de tres puntos*/
+.rd-navbar-collapse-toggle span, .rd-navbar-collapse-toggle span:before, .rd-navbar-collapse-toggle span:after{
+	background: white;
+}
+
+/*fondo seccion seleccionada en menu hamburg en pantalla chica*/
+.rd-navbar-fixed .rd-nav-item:hover .rd-nav-link, .rd-navbar-fixed .rd-nav-item.focus .rd-nav-link, .rd-navbar-fixed .rd-nav-item.active .rd-nav-link, .rd-navbar-fixed .rd-nav-item.opened .rd-nav-link{
+	background-color: #313654;
+}
+
+@media (max-width:992px){
+	.navbar-contact-list li a{
+		color: #313654;
+	}
+	.icon{
+		color: #313654;
+	}
+	.social-links li a{
+		color: #313654;	
+	}
+	#footer .social-links li a{
+		color: white;
+	}
+}
+	
 
 /*HERO - IMAGEN PPAL*/
 
@@ -149,8 +201,13 @@ h1, h2, h3, h4, h5, h6{
 
 /*backround y color de letra footer*/
 .footer-classic {
-	background: #6082B0;
+	/*background: #6082B0;*/
+	background-color: #313654;
 	color: #313654;
+}
+
+#footer{
+	color: white;
 }
 
 .footer-classic .brand img{
@@ -177,7 +234,15 @@ h1, h2, h3, h4, h5, h6{
 
 /*color h4*/
 #footer h4{
-	/*color: #F6B78D;*/
+	color: white;
+}
+
+.row-footer-brand .text-brand, .row-footer-brand .text-brand a {
+	color: white;
+}
+
+.row-footer-brand .text-brand .name-abo{
+	font-size: 24px;
 }
 
 
