--- a/css/my_style.css
+++ b/css/my_style.css
@@ -245,6 +245,10 @@ h1, h2, h3, h4, h5, h6{
 	font-size: 24px;
 }
 
+/*BOTON DE IR ARRIBA*/
+.ui-to-top{
+	background: #E75144;
+}
 
 @media (max-width: 576px){
 	.row-footer-brand{
